--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="no_connection">No connection</string>
+    <string name="no_internet_description">Sorry, no connection was made between your device and the Bumgard.<br/> Try again</string>
+    <string name="try_again">Retry</string>
+    <string name="current_weather">Current Weather</string>
+    <string name="favorite">Favorite</string>
 </resources>
