create splash fragment and UserInfoManager.kt for save default state local and provide SharedPreferencesModule.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="try_again">Retry</string>
     <string name="current_weather">Current Weather</string>
     <string name="favorite">Favorite</string>
+    <string name="app_desc">Kianiranian Smart tech development group</string>
+    <string name="app_site">www.kianiranian.com</string>
+
 </resources>
