crate WeatherResponse.kt class crate ApiService.kt and provide retrofit and moshi and api service dependency create setting repository and provide this dependency crate SafeApiCall.kt for handler response api create FailureInterface.kt for handler error response add call api and show required ui state in SettingFragment.kt with SettingEvent.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="favorite">Favorite</string>
     <string name="app_desc">Kianiranian Smart tech development group</string>
     <string name="app_site">www.kianiranian.com</string>
+    <string name="your_place">Your place</string>
+    <string name="place_name_cannot_be_empty">"Place name cannot be empty" </string>
+    <string name="Location_name_not_found">"Location name not found" </string>
 
 </resources>
